--- a/sobree.html
+++ b/sobree.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="header.css">
 </head>
 <body>
-    
+    <header>
+        <font face="Arial">oii hihihi</font>
+<nav>
+
+</nav>
+    </header>
 </body>
 </html>
