--- a/contatoo.html
+++ b/contatoo.html
@@ -10,6 +10,14 @@
     <link rel="stylesheet" href="contato.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Projeto final</h1>
+<nav>
+<a href="inicio.html">Início</a>
+<a href="sobree.html">Sobre nós</a>
+<a href="projetos.html">Nossos projetos</a>
+<a href="contatoo.html">Entre em contato</a>
+</nav>
+    </header>
 </body>
 </html>
