--- a/sobree.html
+++ b/sobree.html
@@ -11,9 +11,12 @@
 </head>
 <body>
     <header>
-        <font face="Arial">oii hihihi</font>
+        <h1>Projeto final</h1>
 <nav>
-
+<a href="inicio.html">Início</a>
+<a href="sobree.html">Sobre nós</a>
+<a href="projetos.html">Nossos projetos</a>
+<a href="contatoo.html">Entre em contato</a>
 </nav>
     </header>
 </body>
