Nova logo - Primeira parte do Início feita!

--- a/inicio.html
+++ b/inicio.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Projeto final</h1>
+        <img src="divina beleza (2).png" alt="" height="80" width="80">
 <nav>
 <a href="inicio.html">Início</a>
 <a href="sobree.html">Sobre nós</a>
@@ -19,5 +19,10 @@
 <a href="contatoo.html">Entre em contato</a>
 </nav>
     </header>
+
+    <div><img src="team 2.jfif" alt="Image" width="200" height="200"></div>
+<h1 id="intro">Team 2 - Sejam bem vindos ao nosso site!</h1>
+<hr>
+<h2 id="sobre">QUEM SOMOS</h2>
 </body>
 </html>
