--- a/projetos.html
+++ b/projetos.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Projeto final</h1>
+        <img src="divina beleza (2).png" alt="" height="80" width="80">
 <nav>
 <a href="inicio.html">Início</a>
 <a href="sobree.html">Sobre nós</a>
