Feita a página de contato.

--- a/contatoo.html
+++ b/contatoo.html
@@ -19,5 +19,17 @@
 <a href="contatoo.html">Entre em contato</a>
 </nav>
     </header>
+    <div id="imagem"><img src="team 2.jfif" alt="Image" width="400" height="400"></div>
+    <br>
+    <h1 id="contato">ENTRE EM CONTATO</h1>
+    <hr>
+    <h3>E-mail:</h3>
+    <input class="digite" type="E-mail" name="Digite seu e-mail" id="" placeholder="Digite aqui seu e-mail">
+    <h3>Nome:</h3>
+    <input class="digite" type="Seu nome" name="Digite seu nome" id="" placeholder="Digite aqui seu nome">
+    <h3>Mensagem:</h3>
+    <textarea class="digite" name="" id="" cols="30" rows="10" placeholder="Diga-nos, do que precisa?"></textarea>
+    <br>
+    <hr>
 </body>
 </html>
