Criação do Rodapé.

--- a/contatoo.html
+++ b/contatoo.html
@@ -31,5 +31,16 @@
     <textarea class="digite" name="" id="" cols="30" rows="10" placeholder="Diga-nos, do que precisa?"></textarea>
     <br>
     <hr>
+    <footer>
+        <img src="divina beleza (2).png" alt="" height="80" width="80">
+        <strong class="creditos">
+    Créditos:
+        </strong>
+        <p class="creditos"><strong>Arthur</strong><br>  Edição, cabeçalho, rodapé, página inicial e página de contato.</p>
+        <p class="creditos"><strong>Tiago</strong><br>  Slides, Logo e Ideias.</p>
+        <p class="creditos"><strong>Raphael</strong><br>  Página que conta sobre nós.</p>
+        <p class="creditos"><strong>Gustavo</strong><br>  Ajuda na criação dos slides. </p>
+        <p class="creditos"><strong>Kauan</strong><br>  Página dos nossos projetos.</p>
+    </footer>
 </body>
 </html>
