--- a/sobree.html
+++ b/sobree.html
@@ -19,5 +19,17 @@
 <a href="contatoo.html">Entre em contato</a>
 </nav>
     </header>
+    <p>.</p>
+    <footer>
+        <img src="divina beleza (2).png" alt="" height="80" width="80">
+        <strong class="creditos">
+    Créditos:
+        </strong>
+        <p class="creditos"><strong>Arthur</strong><br>  Edição, cabeçalho, rodapé, página inicial e página de contato.</p>
+        <p class="creditos"><strong>Tiago</strong><br>  Slides, Logo e Ideias.</p>
+        <p class="creditos"><strong>Raphael</strong><br>  Página que conta sobre nós.</p>
+        <p class="creditos"><strong>Gustavo</strong><br>  Ajuda na criação dos slides. </p>
+        <p class="creditos"><strong>Kauan</strong><br>  Página dos nossos projetos.</p>
+    </footer>
 </body>
 </html>
