--- a/inicio.html
+++ b/inicio.html
@@ -19,10 +19,23 @@
 <a href="contatoo.html">Entre em contato</a>
 </nav>
     </header>
-
+    <br>
     <div><img src="team 2.jfif" alt="Image" width="200" height="200"></div>
 <h1 id="intro">Team 2 - Sejam bem vindos ao nosso site!</h1>
+<br>
 <hr>
+<br>
 <h2 id="sobre">QUEM SOMOS</h2>
+<footer>
+    <img src="divina beleza (2).png" alt="" height="80" width="80">
+    <strong class="creditos">
+Créditos:
+    </strong>
+    <p class="creditos"><strong>Arthur</strong><br>  Edição, cabeçalho, rodapé, página inicial e página de contato.</p>
+    <p class="creditos"><strong>Tiago</strong><br>  Slides, Logo e Ideias.</p>
+    <p class="creditos"><strong>Raphael</strong><br>  Página que conta sobre nós.</p>
+    <p class="creditos"><strong>Gustavo</strong><br>  Ajuda na criação dos slides. </p>
+    <p class="creditos"><strong>Kauan</strong><br>  Página dos nossos projetos.</p>
+</footer>
 </body>
 </html>
