Página de Início feita - Exceto Tiago.

--- a/inicio.html
+++ b/inicio.html
@@ -26,9 +26,25 @@
 <hr>
 <br>
 <h2 id="sobre">QUEM SOMOS</h2>
-<br>
+
+
+<div><img class ="arthur"src="img-arthur.jpeg" alt="Foto do Arthur" height="300" width="300"></div>
+
+<h2 id="intro">Meu nome é Arthur, tenho 16 anos e estou concluindo o curso de programação da Resilia.</h2>
 <hr>
-<br>
+<div><img class ="arthur"src="img-gustavo.jpeg" alt="Foto do Gustavo" height="300" width="300"></div>
+
+<h2 id="intro">Meu nome é Gustavo, tenho 16 anos e estou concluindo o curso de programação da Resilia.</h2>
+<hr>
+<div><img class ="arthur"src="img-raphael.jpeg" alt="Foto do Raphael" height="300" width="300"></div>
+
+<h2 id="intro">Meu nome é Raphael, tenho 15 anos e estou concluindo o curso de programação da Resilia.</h2>
+<hr><div><img class ="arthur"src="img-kauan.jpeg" alt="Foto do Kauan" height="300" width="300"></div>
+
+<h2 id="intro">Meu nome é Kauan, tenho 14 anos e estou concluindo o curso de programação da Resilia.</h2>
+<hr><div><img class ="arthur"src="" alt="Foto do Tiago" height="300" width="300"></div>
+
+<h2 id="intro">Meu nome é Tiago, tenho x anos e estou concluindo o curso de programação da Resilia.</h2>
 
 <footer>
     <img src="divina beleza (2).png" alt="" height="80" width="80">
@@ -38,8 +54,8 @@ Créditos:
     <p class="creditos"><strong><a class ="credito" href="https://instagram.com/arthurpauloat/" target="_blank">Arthur</a></strong><br>  Edição, cabeçalho, rodapé, página inicial e página de contato.</p>
     <p class="creditos"><strong><a class ="credito"  href="https://instagram.com/" target="_blank">Thiago</a></strong><br>  Slides, Logo e Ideias.</p>
     <p class="creditos"><strong><a class ="credito"  href="https://instagram.com/raphaelrbbt/" target="_blank">Raphael</a></strong><br>  Página que conta sobre nós.</p>
-    <p class="creditos"><strong><a class ="credito"  href="https://instagram.com/gusta_21" target="_blank">Gustavo</a></strong><br>  Ajuda na criação dos slides. </p>
-    <p class="creditos"><strong><a class ="credito"  href="https://instagram.com/" target="_blank">Kauan</a></strong><br>  Página dos nossos projetos.</p>
+    <p class="creditos"><strong><a class ="credito"  href="https://instagram.com/gusta_21/" target="_blank">Gustavo</a></strong><br>  Ajuda na criação dos slides. </p>
+    <p class="creditos"><strong><a class ="credito"  href="https://instagram.com/kauanhenrique8639/" target="_blank">Kauan</a></strong><br>  Página dos nossos projetos.</p>
 </footer>
 </body>
 </html>
