--- a/inicio.html
+++ b/inicio.html
@@ -20,7 +20,7 @@
 </nav>
     </header>
     <br>
-    <div><img src="team 2.jfif" alt="Image" width="200" height="200"></div>
+    <div> <img src="team 2.jfif" alt="Image" width="200" height="200"></div>s
 <h1 id="intro">Team 2 - Sejam bem vindos ao nosso site!</h1>
 <br>
 <hr>
@@ -52,7 +52,7 @@
 Créditos:
     </strong>
     <p class="creditos"><strong><a class ="credito" href="https://instagram.com/arthurpauloat/" target="_blank">Arthur</a></strong><br>  Edição, cabeçalho, rodapé, página inicial e página de contato.</p>
-    <p class="creditos"><strong><a class ="credito"  href="https://instagram.com/" target="_blank">Thiago</a></strong><br>  Slides, Logo e Ideias.</p>
+    <p class="creditos"><strong><a class ="credito"  href="https://instagram.com/" target="_blank">Tiago</a></strong><br>  Slides, Logo e Ideias.</p>
     <p class="creditos"><strong><a class ="credito"  href="https://instagram.com/raphaelrbbt/" target="_blank">Raphael</a></strong><br>  Página que conta sobre nós.</p>
     <p class="creditos"><strong><a class ="credito"  href="https://instagram.com/gusta_21/" target="_blank">Gustavo</a></strong><br>  Ajuda na criação dos slides. </p>
     <p class="creditos"><strong><a class ="credito"  href="https://instagram.com/kauanhenrique8639/" target="_blank">Kauan</a></strong><br>  Página dos nossos projetos.</p>
