--- a/projetos.html
+++ b/projetos.html
@@ -13,10 +13,10 @@
     <header>
         <img src="divina beleza (2).png" alt="" height="80" width="80">
     <nav>
-    <a href="inicio.html">Início</a>
-    <a href="sobree.html">Sobre nós</a>
-    <a href="projetos.html">Nossos projetos</a>
-    <a href="contatoo.html">Entre em contato</a>
+    <a class = "cabecalho"  href="inicio.html">Início</a>
+    <a class = "cabecalho"  href="sobree.html">Sobre nós</a>
+    <a class = "cabecalho"  href="projetos.html">Nossos projetos</a>
+    <a class = "cabecalho"  href="contatoo.html">Entre em contato</a>
     </nav>
         </header>
         <br>
@@ -94,13 +94,13 @@
             <img src="divina beleza (2).png" alt="" height="80" width="80">
             <strong class="creditos">
         Créditos:
-            </strong>
-            <p class="creditos"><strong>Arthur</strong><br>  Edição, cabeçalho, rodapé, página inicial e página de contato.</p>
-            <p class="creditos"><strong>Tiago</strong><br>  Slides, Logo e Ideias.</p>
-            <p class="creditos"><strong>Raphael</strong><br>  Página que conta sobre nós.</p>
-            <p class="creditos"><strong>Gustavo</strong><br>  Ajuda na criação dos slides. </p>
-            <p class="creditos"><strong>Kauan</strong><br>  Página dos nossos projetos.</p>
-        </footer>
+        </strong>
+        <p class="creditos"><strong><a class ="credito" href="https://instagram.com/arthurpauloat/" target="_blank">Arthur</a></strong><br>  Edição, cabeçalho, rodapé, página inicial e página de contato.</p>
+        <p class="creditos"><strong><a class ="credito"  href="https://instagram.com/" target="_blank">Tiago</a></strong><br>  Slides, Logo e Ideias.</p>
+        <p class="creditos"><strong><a class ="credito"  href="https://instagram.com/raphaelrbbt/" target="_blank">Raphael</a></strong><br>  Página que conta sobre nós.</p>
+        <p class="creditos"><strong><a class ="credito"  href="https://instagram.com/gusta_21/" target="_blank">Gustavo</a></strong><br>  Ajuda na criação dos slides. </p>
+        <p class="creditos"><strong><a class ="credito"  href="https://instagram.com/kauanhenrique8639/" target="_blank">Kauan</a></strong><br>  Página dos nossos projetos.</p>
+    </footer>
          
 
 </body>
