--- a/inicio.html
+++ b/inicio.html
@@ -42,9 +42,9 @@
 <hr><div><img class ="arthur"src="img-kauan.jpeg" alt="Foto do Kauan" height="300" width="300"></div>
 
 <h2 id="intro">Meu nome é Kauan, tenho 14 anos e estou concluindo o curso de programação da Resilia.</h2>
-<hr><div><img class ="arthur"src="" alt="Foto do Tiago" height="300" width="300"></div>
+<hr><div><img class ="arthur"src="img-tiago.jpeg" alt="Foto do Tiago" height="300" width="300"></div>
 
-<h2 id="intro">Meu nome é Tiago, tenho x anos e estou concluindo o curso de programação da Resilia.</h2>
+<h2 id="intro">Meu nome é Tiago, tenho 14 anos e estou concluindo o curso de programação da Resilia.</h2>
 
 <footer>
     <img src="divina beleza (2).png" alt="" height="80" width="80">
