--- a/sobree.html
+++ b/sobree.html
@@ -19,7 +19,7 @@
 <a class = "cabecalho"  href="contatoo.html">Entre em contato</a>
 </nav>
     </header>
-    <p>.</p>
+    <img src="img-raphael.jpeg" alt="" height="300" width="300">
     <footer>
         <img src="divina beleza (2).png" alt="" height="80" width="80">
         <strong class="creditos">
