--- a/sobree.html
+++ b/sobree.html
@@ -37,7 +37,7 @@
 
 <img src="img-kauan.jpeg" alt="" height="300" width="300">
 <
-    p>Meu nome é Kauan tenho 14 anos o nome da minha mãe é Beth , o do meu pai é Max e o da minha irmã é rayanne.
+    <p>Meu nome é Kauan tenho 14 anos o nome da minha mãe é Beth , o do meu pai é Max e o da minha irmã é rayanne.
     Tudo oque eu faço no meu dia é dormir e ficar acordado, eu toco teclado/piano, escaleta e ocarina. O nome do meu melhor amigo é ramom jogamos todos os dias juntos e conversamos.
     Faço um curso da resilia de programação e aprendo cada aula muito.</p>
 
