--- a/sobree.html
+++ b/sobree.html
@@ -19,42 +19,52 @@
 <a class = "cabecalho"  href="contatoo.html">Entre em contato</a>
 </nav>
     </header>
-<<<<<<< HEAD
-    <img src="img-arthur.jpeg" alt="" height="300" width="300">
-=======
-    <p>Meu nome é Arthur, e eu tenho 16 anos. Eu pratico alguns exercícios, eu faço futebol, e faço academia. Entrei no curso da Resilia, e desde então desenvolvi muito interesse na área de programação,sempre empenhado em dar meu melhor e aprender coisas de fora.</p>
-
-    <img src="img-gustavo.jpeg" alt="" height="300" width="300">
+    <br>
+    <div> <img src="team 2.jfif" alt="Image" width="200" height="200"></div>
+    <h1 id="sobre">SOBRE NÓS</h1>
+    <hr>
+    <div><img id="imagens" src="img-arthur.jpeg" alt="" height="400" width="400"></div>
+    <h3 id="intro">Meu nome é Arthur, e eu tenho 16 anos. Eu pratico alguns exercícios, eu faço futebol, e faço academia. Entrei no curso da Resilia, e desde então desenvolvi muito interesse na área de programação,sempre empenhado em dar meu melhor e aprender coisas de fora.</h3>
+<br>
+<hr>
+<br>
+    <div><img id="imagens"  src="img-gustavo.jpeg" alt="" height="400" width="400"></div>
     
-    <p>Meu nome é Gustavo Ramos, nasci em 25 de julho de 2006 no Rio de Janeiro. Tenho uma família gigante, o nome da minha mãe é Kaciene e da minha irmã Fernanda. Quando pequeno eu tinha um aquário, cheio de peixinhos, mas acabei dando muita comida para eles, e acabaram morrendo, fiquei muito mal.
+    <h3 id="intro">Meu nome é Gustavo Ramos, nasci em 25 de julho de 2006 no Rio de Janeiro. Tenho uma família gigante, o nome da minha mãe é Kaciene e da minha irmã Fernanda. Quando pequeno eu tinha um aquário, cheio de peixinhos, mas acabei dando muita comida para eles, e acabaram morrendo, fiquei muito mal.
         Sou designer, gosto de futebol e amo ouvir música, ouço o dia inteiro.
-        Tenho medo de altura e de cobra</p>
+        Tenho medo de altura e de cobra</h3>
+        <br>
+        <hr>
+        <br>
+        <div><img id="imagens" src="img-raphael.jpeg" alt="" height="400" width="400"></div>
 
-        <img src="img-raphael.jpeg" alt="" height="300" width="300">
+        <h3 id="intro">Meu nome é Raphael tenho 15 anos nome da minha mãe é Paula, e do meu pai é Bruno.
+            Eu gosto de jogar bola, soltar pipa etc. Minha família me considera um cara atípico pois se colocar uma bola e um celular na minha frente eu vou escolher a bola.</h3>
+            <br>
+            <hr>
+            <br>
+<div><img id="imagens" src="img-kauan.jpeg" alt="" height="400" width="400"></div>
 
-        <p>Meu nome é Raphael tenho 15 anos nome da minha mãe é Paula,  e do meu pai é Bruno.
-            Eu gosto de jogar bola, soltar pipa etc. Minha família me considera um cara atípico pois se colocar uma bola e um celular na minha frente eu vou escolher a bola.</p>
-
-<img src="img-kauan.jpeg" alt="" height="300" width="300">
-<
-    <p>Meu nome é Kauan tenho 14 anos o nome da minha mãe é Beth , o do meu pai é Max e o da minha irmã é rayanne.
+    <h3 id="intro">Meu nome é Kauan tenho 14 anos o nome da minha mãe é Beth , o do meu pai é Max e o da minha irmã é rayanne.
     Tudo oque eu faço no meu dia é dormir e ficar acordado, eu toco teclado/piano, escaleta e ocarina. O nome do meu melhor amigo é ramom jogamos todos os dias juntos e conversamos.
-    Faço um curso da resilia de programação e aprendo cada aula muito.</p>
-
-    <img src="img-tiago.jpeg" alt="" height="300" width="300">
-    <p>Meu nome é Tiago, tenho 14 anos e nasci no em Duque de Caxias no Rio de Janeiro. Tenho uma mãe que se chama Mara e um irmão que se chama Lucas. Gosto muito de jogar no computador e no celular. Quando eu era pequeno eu quase morri esmagado por uma estante, mas graças a Deus não aconteceu nada</p>
-
->>>>>>> c1fe6b5881a503b6f212577592c88ba076ac679a
+    Faço um curso da resilia de programação e aprendo cada aula muito.</h3>
+    <br>
+    <hr>
+    <br>
+    <div><img id="imagens" src="img-tiago.jpeg" alt="" height="400" width="400"></div>
+    <h3 id="intro">Meu nome é Tiago, tenho 14 anos e nasci no em Duque de Caxias no Rio de Janeiro. Tenho uma mãe que se chama Mara e um irmão que se chama Lucas. Gosto muito de jogar no computador e no celular. Quando eu era pequeno eu quase morri esmagado por uma estante, mas graças a Deus não aconteceu nada</h3>
+    <br>
+    <br>
     <footer>
         <img src="divina beleza (2).png" alt="" height="80" width="80">
         <strong class="creditos">
     Créditos:
-        </strong>
-        <p class="creditos"><strong><a class ="credito" href="https://instagram.com/arthurpauloat/" target="_blank">Arthur</a></strong><br>  Edição, cabeçalho, rodapé, página inicial e página de contato.</p>
-        <p class="creditos"><strong><a class ="credito"  href="https://instagram.com/" target="_blank">Tiago</a></strong><br>  Slides, Logo e Ideias.</p>
-        <p class="creditos"><strong><a class ="credito"  href="https://instagram.com/raphaelrbbt/" target="_blank">Raphael</a></strong><br>  Página que conta sobre nós.</p>
-        <p class="creditos"><strong><a class ="credito"  href="https://instagram.com/gusta_21/" target="_blank">Gustavo</a></strong><br>  Ajuda na criação dos slides. </p>
-        <p class="creditos"><strong><a class ="credito"  href="https://instagram.com/kauanhenrique8639/" target="_blank">Kauan</a></strong><br>  Página dos nossos projetos.</p>
-    </footer>
+    </strong>
+    <p class="creditos"><strong><a class ="credito" href="https://instagram.com/arthurpauloat/" target="_blank">Arthur</a></strong><br>  Edição, cabeçalho, rodapé, página inicial e página de contato.</p>
+    <p class="creditos"><strong><a class ="credito"  href="https://instagram.com/" target="_blank">Tiago</a></strong><br>  Slides, Logo e Ideias.</p>
+    <p class="creditos"><strong><a class ="credito"  href="https://instagram.com/raphaelrbbt/" target="_blank">Raphael</a></strong><br>  Página que conta sobre nós.</p>
+    <p class="creditos"><strong><a class ="credito"  href="https://instagram.com/gusta_21/" target="_blank">Gustavo</a></strong><br>  Ajuda na criação dos slides. </p>
+    <p class="creditos"><strong><a class ="credito"  href="https://instagram.com/kauanhenrique8639/" target="_blank">Kauan</a></strong><br>  Página dos nossos projetos.</p>
+</footer>
 </body>
 </html>
