--- a/inicio.html
+++ b/inicio.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="inicio.css">
+    <link rel="icon" href="team 2.jfif">
 </head>
 <body>
     <header>
@@ -20,7 +21,7 @@
 </nav>
     </header>
     <br>
-    <div> <img src="team 2.jfif" alt="Image" width="200" height="200"></div>s
+    <div> <img src="team 2.jfif" alt="Image" width="200" height="200"></div>
 <h1 id="intro">Team 2 - Sejam bem vindos ao nosso site!</h1>
 <br>
 <hr>
