--- a/sobree.html
+++ b/sobree.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="sobre.css">
     <link rel="stylesheet" href="header.css">
+    <link rel="icon" href="team 2.jfif">
 </head>
 <body>
     <header>
